# sccsos

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hermes  Dockerfile.slim  LICENSE  README.md  _debug_session.py  docker-compose.kafka.yml  docker-compose.observability.yaml  docker-compose.yaml  pyproject.toml  sccsos-architecture-audit-report.md  sccsos.yaml
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-feature-request.md  03-question.md
.github/workflows/: ci-cd.yaml  ci.yml  docker.yml  release.yml  test.yml
agents/: architect.yaml  code-reviewer.yaml  doc-writer.yaml  hermes-installer.yaml
config/: pricing.json  sample-config.yaml
deploy/grafana/: README.md  sccsos-dashboard.json
deploy/hermes-home/: .env  config.yaml
deploy/k8s/: 00-namespace.yaml  10-configmap.yaml  20-pvc.yaml  30-deployment.yaml  40-service.yaml  50-hpa.yaml  README.md
docs/: pdf-gb-style.css  reference.docx  项目需求.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  style.css  ws.js
ops/: production-checklist.md  stability-verification.md
personalities/: agent-architect.yaml  code-reviewer.yaml  doc-writer.yaml  hermes-installer.yaml
sccsos/: __init__.py  __main__.py  _version.py  cli.py  skill_rating.py
sccsos/agents/: __init__.py
sccsos/api/: admin.html  fastapi_app.py  models.py  server.py
sccsos/cli/: __init__.py  agent_cmd.py  audit_cmd.py  benchmark_cmd.py  billing_cmd.py  config_cmd.py  hermes_cmd.py  hermes_doctor.py  hermes_install.py  hermes_setup.py  init_cmd.py  maintenance_cmd.py  memory_cmd.py  personality_cmd.py  plugin_cmd.py  (+8 more)
scripts/: backup_db.sh  benchmark_kafka.py  export-docker-context.sh  extract_release_notes.py  post_process_docx.py  run_benchmark.py  run_stability_test.py  stability_monitor.py  test-kafka-integration.sh
tests/: CONVENTIONS.md  conftest.py  locustfile.py  test_agent_definition.py  test_agent_message_bus.py  test_api_e2e.py  test_api_server.py  test_billing.py  test_billing_api.py  test_billing_csv.py  test_billing_subscriptions.py  test_chaos_engineering.py  test_chroma_integration.py  test_chroma_store.py  test_cli_basic.py  test_comprehensive.py  test_context_builder.py  test_coverage_gaps.py  test_crud_ext.py  test_edge_cases.py  test_event_bus.py  test_event_bus_kafka.py  test_event_bus_kafka_integration.py  test_event_bus_redis.py  test_fastapi_server.py  test_fault_tolerance.py  test_hermes_adapter.py  test_hermes_docker_adapter.py  test_hermes_remote_adapter.py  test_injection.py  test_integration.py  test_k8s_manifests.py  test_knowledge_base_cache.py  test_knowledge_base_scan.py  test_maintenance.py  test_maintenance_api.py  test_memory_base.py  test_memory_store.py  test_model_router.py  test_observability_coverage.py  (+34 more)
wiki/: SCCS OS 企业级商用版部署与操作手册.md  SCCS OS 轻量化内部版部署与操作手册.md
workflows/: hermes-setup.yaml  冒烟测试.yaml  并行检索.yaml  条件分支示例.yaml  架构评审.yaml  每日巡检.yaml
外部参考/: README.md
脚本/: 参考模板.docx  合并完整手册.py  后处理文档.py  国标样式.css  新页过滤.html.lua  新页过滤.lua  构建全部文档.py
输出/: 0-目录与索引.md  2-企业级可行性方案.md  4-架构评审报告.md  5-第一阶段实施计划.md  6-部署指南.md  8-文档与插图生成规范.md  9-可行性技术方案文档.md  SCCS OS v0.14.2 全量测试报告.md  SCCS OS v0.16.5 全量测试报告.md  SCCS OS 企业级商用版部署与操作手册.md  SCCS OS 测试验证与操作手册.md  SCCS OS 立项与设计手册.md  SCCS OS 轻量化内部版部署与操作手册.md  SCCS OS 部署与操作手册.md  SCCS-OS-文档代码基线一致性报告.md  SCCS_OS_用户手册.md  _SCCS OS 架构深度分析与优化建议.md  _SCCS OS 部署与操作手册_tmp.md  _企业级可行性方案_tmp.md  _可行性技术方案文档_tmp.md  _技术架构规格书_tmp.md  _操作手册_tmp.md  _整体设计方案_tmp.md  _轻量化内部版部署与操作手册_tmp.md  配置管理与安全审计报告.md
(+131 files in other folders)
