[project]
name = "sccsos"
version = "0.6.0"
description = "SCCS Operating System — Smart Agent Runtime Platform for SCCS-T Product Ecosystem"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SCCS OS Team" },
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
]

[project.scripts]
sccsos = "sccsos.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sccsos*"]

[tool.setuptools.package-data]
sccsos = ["agents/*.yaml", "workflows/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
