[project]
name = "sccsos"
version = "0.10.0"
description = "SCCS Operating System — Smart Agent Runtime Platform for SCCS-T Product Ecosystem"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SCCS OS Team" },
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "httpx>=0.27,<1",
]
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.5,<3",
]
otel = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2",
]
all = [
    "sccsos[dev]",
    "sccsos[api]",
    "sccsos[otel]",
]

[project.scripts]
sccsos = "sccsos.cli:main"
sc = "sccsos.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sccsos*"]

[tool.setuptools.package-data]
sccsos = ["agents/*.yaml", "workflows/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
