[project]
name = "sccsos"
version = "0.12.1"
description = "SCCS Operating System — Smart Agent Runtime Platform for SCCS-T Product Ecosystem"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SCCS OS Team" },
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
    "httpx>=0.27,<1",
]
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.5,<3",
]
otel = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2",
]
kafka = [
    "kafka-python>=2.0,<3",
]
chroma = [
    "chromadb>=0.5,<1",
]
pg = [
    "psycopg2-binary>=2.9,<3",
]
all = [
    "sccsos[dev]",
    "sccsos[api]",
    "sccsos[otel]",
    "sccsos[kafka]",
    "sccsos[chroma]",
    "sccsos[pg]",
]

[project.scripts]
sccsos = "sccsos.cli:main"
sc = "sccsos.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sccsos*"]

[tool.setuptools.package-data]
sccsos = ["agents/*.yaml", "workflows/*.yaml", "api/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:starlette.testclient",
]
addopts = "--cov=sccsos --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["sccsos"]
omit = ["sccsos/api/server.py", "sccsos/cli/system_cmd.py"]
